Updates FFC scheme labels to match implementation - closes #828

--- a/artifacts/acvp_sub_kas_ffc.html
+++ b/artifacts/acvp_sub_kas_ffc.html
@@ -955,10 +955,10 @@
 
 <ul>
 <li>dhHybrid1</li>
-<li>MQV2</li>
+<li>mqv2</li>
 <li>dhEphem - KeyConfirmation not supported.</li>
 <li>dhHybridOneFlow</li>
-<li>MQV1</li>
+<li>mqv1</li>
 <li>dhOneFlow - Can only provide unilateral key confirmation party V to party U.</li>
 <li>dhStatic - requires dkmNonceTypes</li>
 </ul>
@@ -1048,10 +1048,10 @@
 </tr>
 <tr>
 <td class="left">dkmNonceTypes</td>
-<td class="left">The nonce type(s) the IUT is to use for deriving keying material. Required for DhStatic scheme.</td>
+<td class="left">The nonce type(s) the IUT is to use for deriving keying material. Required for dhStatic scheme.</td>
 <td class="left">array</td>
 <td class="left">randomNonce, timestamp, sequence, timestampSequence </td>
-<td class="left">Yes - required for DhStatic scheme</td>
+<td class="left">Yes - required for dhStatic scheme</td>
 </tr>
 <tr>
 <td class="left"></td>
@@ -1660,7 +1660,7 @@
 </tr></thead>
 <tbody>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -1682,7 +1682,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -1704,7 +1704,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -1726,7 +1726,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -1748,7 +1748,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -1770,7 +1770,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -1792,7 +1792,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -1814,7 +1814,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -1836,7 +1836,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -1858,7 +1858,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -1880,7 +1880,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -1902,7 +1902,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -1924,7 +1924,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -1946,7 +1946,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -1968,7 +1968,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -1990,7 +1990,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2012,7 +2012,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2034,7 +2034,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2056,7 +2056,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2078,7 +2078,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2100,7 +2100,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2122,7 +2122,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2144,7 +2144,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2166,7 +2166,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2188,7 +2188,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhEphem</td>
+<td class="left">dhEphem</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2210,7 +2210,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhEphem</td>
+<td class="left">dhEphem</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2232,7 +2232,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhEphem</td>
+<td class="left">dhEphem</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2254,7 +2254,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhEphem</td>
+<td class="left">dhEphem</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2276,7 +2276,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2298,7 +2298,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2320,7 +2320,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2342,7 +2342,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2364,7 +2364,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2386,7 +2386,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2408,7 +2408,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2430,7 +2430,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2452,7 +2452,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2474,7 +2474,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2496,7 +2496,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2518,7 +2518,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2540,7 +2540,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2562,7 +2562,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2584,7 +2584,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2606,7 +2606,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2628,7 +2628,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2650,7 +2650,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2672,7 +2672,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2694,7 +2694,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2716,7 +2716,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2738,7 +2738,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2760,7 +2760,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2782,7 +2782,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2804,7 +2804,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2826,7 +2826,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2848,7 +2848,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2870,7 +2870,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2892,7 +2892,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2914,7 +2914,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2936,7 +2936,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2958,7 +2958,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2980,7 +2980,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -3002,7 +3002,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -3024,7 +3024,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -3046,7 +3046,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -3068,7 +3068,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -3090,7 +3090,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -3112,7 +3112,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -3134,7 +3134,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -3156,7 +3156,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -3178,7 +3178,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
