--- a/artifacts/acvp_sub_kas_ffc_Sp800-56Ar3.html
+++ b/artifacts/acvp_sub_kas_ffc_Sp800-56Ar3.html
@@ -805,10 +805,10 @@
 
 <ul>
 <li>dhHybrid1</li>
-<li>MQV2</li>
+<li>mqv2</li>
 <li>dhEphem - KeyConfirmation not supported.</li>
 <li>dhHybridOneFlow</li>
-<li>MQV1</li>
+<li>mqv1</li>
 <li>dhOneFlow - Can only provide unilateral key confirmation party V to party U.</li>
 <li>dhStatic</li>
 </ul>
@@ -1701,7 +1701,7 @@
 </tr></thead>
 <tbody>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -1723,7 +1723,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -1745,7 +1745,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -1767,7 +1767,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -1789,7 +1789,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -1811,7 +1811,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -1833,7 +1833,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -1855,7 +1855,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -1877,7 +1877,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -1899,7 +1899,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -1921,7 +1921,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -1943,7 +1943,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybrid1</td>
+<td class="left">dhHybrid1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -1965,7 +1965,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -1987,7 +1987,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2009,7 +2009,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2031,7 +2031,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2053,7 +2053,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2075,7 +2075,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2097,7 +2097,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2119,7 +2119,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2141,7 +2141,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2163,7 +2163,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2185,7 +2185,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2207,7 +2207,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv2</td>
+<td class="left">mqv2</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2229,7 +2229,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhEphem</td>
+<td class="left">dhEphem</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2251,7 +2251,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhEphem</td>
+<td class="left">dhEphem</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2273,7 +2273,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhEphem</td>
+<td class="left">dhEphem</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2295,7 +2295,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhEphem</td>
+<td class="left">dhEphem</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2317,7 +2317,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2339,7 +2339,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2361,7 +2361,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2383,7 +2383,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2405,7 +2405,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2427,7 +2427,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2449,7 +2449,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2471,7 +2471,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2493,7 +2493,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2515,7 +2515,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2537,7 +2537,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2559,7 +2559,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhHybridOneFlow</td>
+<td class="left">dhHybridOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2581,7 +2581,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2603,7 +2603,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2625,7 +2625,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2647,7 +2647,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2669,7 +2669,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2691,7 +2691,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -2713,7 +2713,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2735,7 +2735,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2757,7 +2757,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2779,7 +2779,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2801,7 +2801,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2823,7 +2823,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">Mqv1</td>
+<td class="left">mqv1</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -2845,7 +2845,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2867,7 +2867,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2889,7 +2889,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2911,7 +2911,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -2933,7 +2933,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -2955,7 +2955,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhOneFlow</td>
+<td class="left">dhOneFlow</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -2977,7 +2977,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -2999,7 +2999,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">NoKdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -3021,7 +3021,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfNoKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">None</td>
@@ -3043,7 +3043,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfNoKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">None</td>
@@ -3065,7 +3065,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -3087,7 +3087,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Provider</td>
@@ -3109,7 +3109,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -3131,7 +3131,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">InitiatorPartyU</td>
 <td class="left">Recipient</td>
@@ -3153,7 +3153,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -3175,7 +3175,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Provider</td>
@@ -3197,7 +3197,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
@@ -3219,7 +3219,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">DhStatic</td>
+<td class="left">dhStatic</td>
 <td class="left">KdfKc</td>
 <td class="left">ResponderPartyV</td>
 <td class="left">Recipient</td>
