--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
         <link rel="stylesheet" href="https://pages.nist.gov/nist-header-footer/css/nist-combined.css">
         <script src="https://pages.nist.gov/nist-header-footer/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>
         <script src="https://pages.nist.gov/nist-header-footer/js/nist-header-footer.js" type="text/javascript" defer="defer"></script>
-        <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-        <script type="text/javascript" src="https://pages.nist.gov/leaveNotice/js/jquery.leaveNotice-nist.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
+        <script src="https://pages.nist.gov/leaveNotice/js/jquery.leaveNotice-nist.min.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="https://pages.nist.gov/leaveNotice/css/jquery.leaveNotice.css" />
         <script async type="text/javascript" id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=NIST&subagency=github&pua=UA-66610693-1&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script>
         <script type="text/javascript">
         $(document).ready(function(){
           // Mark external (non-nist.gov) A tags with class "external"
-          //If the adress start with https and ends with nist.gov
+          // If the address start with https and ends with nist.gov
           var re_nist = new RegExp('^https?:\/\/((^\/)*\.)*nist\\.gov(\/|$)'); 
-          //Regex to find address that start with https 
+          // Regex to find address that start with https 
           var re_absolute_address = new RegExp('^((https?:)?\/\/)');
           $("a").each(function(){
             var url=$(this).attr('href'); 
@@ -30,7 +30,8 @@
         </script>
         <title>Automated Cryptographic Validation Protocol Documentation</title>
     </head>
-    <body>Test Page
-        <a href="www.google.com">Click here to go to google</a>
+    <body>
+        <h1>Test Page</h1>
+        <a href="https://www.google.com">Click here to go to google</a>
     </body>
 </html>
