Reformats jQuery calls

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html class="nist-footer-bottom">
     <head>
         <link rel="stylesheet" href="https://pages.nist.gov/nist-header-footer/css/nist-combined.css">
-        <script src="https://pages.nist.gov/nist-header-footer/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>
+        <!--<script src="https://pages.nist.gov/nist-header-footer/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>-->
         <script src="https://pages.nist.gov/nist-header-footer/js/nist-header-footer.js" type="text/javascript" defer="defer"></script>
         <script src="https://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
         <script src="https://pages.nist.gov/leaveNotice/js/jquery.leaveNotice-nist.min.js" type="text/javascript"></script>
@@ -21,7 +21,7 @@
             }else{
               $(this).addClass('external');
             } 
-          });
+          })(jQuery);
           // Add leaveNotice to external A elements 
           $('a.external').leaveNotice({
             siteName: 'ACVP Specification',
