Adds CSS file and removes config.yml from build

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         });
         </script>
         <link rel="stylesheet" type="text/css" href="https://pages.nist.gov/leaveNotice/css/jquery.leaveNotice.css" />
+        <link rel="stylesheet" type="text/css" href="slate.css"/>
         
         <title>Automated Cryptographic Validation Protocol Documentation</title>
     </head>
