Adds algorithm specification for KAS-ECC CDH-Component Sp800-56Ar3

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ecc-sp800-56ar3.txt">KAS ECC onePassMqv Sp800-56Ar3</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ecc-sp800-56ar3.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ecc-sp800-56ar3.txt">KAS ECC OnePassUnified Sp800-56Ar3</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ecc-sp800-56ar3.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ecc-sp800-56ar3.txt">KAS ECC staticUnified Sp800-56Ar3</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ecc-sp800-56ar3.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ecc-sp800-56ar3.txt">KAS ECC CDH-Component Sp800-56Ar3</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ecc-sp800-56ar3.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ffc-sp800-56ar3.txt">KAS FFC dhHybrid1 Sp800-56Ar3</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ffc-sp800-56ar3.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ffc-sp800-56ar3.txt">KAS FFC mqv2 Sp800-56Ar3</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ffc-sp800-56ar3.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ffc-sp800-56ar3.txt">KAS FFC dhEphem Sp800-56Ar3</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ffc-sp800-56ar3.html">HTML</a></li>
