Fixed typo in index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<li><a href="#hashes">Secure Hash</a></li>
 							<li><a href="#xofs">XOFs</a></li>
 							<li><a href="#macs">Message Authentication</a></li>
-							<li><a href="#drbs">DRBGs</a></li>
+							<li><a href="#drbgs">DRBGs</a></li>
 							<li><a href="#dss">Digital Signature</a></li>
 							<li><a href="#kas">Key Agreement</a></li>
 							<li><a href="#kdfs">KDFs</a></li>
