TLS v1.3 KDF not DEMO ONLY in HTML

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-srtp.txt">SRTP</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-srtp.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ssh.txt">SSH</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ssh.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tls.txt">TLS</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tls.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kdf-tls-v1.3.txt">TLS v1.3</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kdf-tls-v1.3.html">HTML</a> - DEMO only</li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kdf-tls-v1.3.txt">TLS v1.3</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kdf-tls-v1.3.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tpm.txt">TPM</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tpm.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x963.txt">ANSX9.63</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x963.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x942.txt">ANSX9.42</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x942.html">HTML</a></li>
